<resources>
    <string name="app_name">WeatherAlert</string>
    <string name="display_air_pressure_at_home_screen">Display air pressure at home screen</string>
    <string name="display_temperature_at_home_screen">Display temperature at home screen</string>
    <string name="display_humidity_at_home_screen">Display Humidity at Home screen</string>
    <string name="dynamic_home_wallpaper">Dynamic Home Wallpaper</string>
    <string name="use_dark_mode">Use Dark mode</string>
    <string name="visuals">Visuals</string>
    <string name="setting_button_that_is_activated">Setting button that is activated</string>
    <string name="settings_button">Settings Button</string>
    <string name="alert_button">Alert Button</string>
    <string name="home_button">Home Button</string>
    <string name="barometer_image">Barometer Image</string>
    <string name="see_more">See more...</string>
    <string name="weather_condition">Weather condition</string>
    <string name="time_of_day">Time of Day</string>
    <string name="home">Home</string>
    <string name="visual_appearance">Visual Appearance</string>
    <string name="settings">Settings</string>
    <string name="alert_button_settings_menu">Alert Button</string>
    <string name="settings_button_settings_menu">Settings Button</string>
    <string name="home_button_settings_menu">Home Button</string>
    <string name="sensor_settings">Sensor Settings</string>
    <string name="profile_settings">Profile settings</string>
    <string name="profile">Profile</string>
    <string name="change_name">Change Name</string>
    <string name="change_email">Change Email</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete Account</string>
    <string name="settings_button_profile_activity">Settings Button</string>
    <string name="alert_button_profile_activity">Alert Button</string>
    <string name="home_button_profile_activity">Home Button</string>
    <string name="data">Data</string>
    <string name="sensor_data_over_time">Sensor Data over Time</string>
    <string name="alert_button_data_activity">Alert Button</string>
    <string name="settings_button_data_activity">Settings Button</string>
    <string name="home_button_data_activity">Home Button</string>
    <string name="alerts">Alerts</string>
    <string name="settings_button_alert_activity">Settings Button</string>
    <string name="alert_button_alert_activity">Alert Button</string>
    <string name="home_button_alert_activity">Home Button</string>
    <string name="sensors">Sensors</string>
    <string name="humidity_sensor">Humidity Sensor</string>
    <string name="use_fahrenheit">Use Fahrenheit</string>
    <string name="temperature_sensor">Temperature Sensor</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="air_pressure_sensor">Air pressure Sensor</string>
    <string name="settings_button_sensor_activity">Settings Button</string>
    <string name="alert_button_sensor_activity">Alert Button</string>
    <string name="home_button_sensor_activity">Home Button</string>
    <string name="settings_button_main_activity">Settings Button</string>
    <string name="alert_button_main_activity">Alert Button</string>
    <string name="home_button_main_activity">Home Button</string>
    <string name="temp_image">Temp Image</string>
    <string name="humid_image">Humid Image</string>
</resources>