<?xml version="1.0" encoding="utf-8"?>
<LinearLayout    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/visualSettings"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/visuals"
        android:textSize="50sp"
        android:textColor="#474BFF"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        >
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/darkModeEnabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_dark_mode"
            android:layout_marginTop="20dp"
            android:textSize="20sp"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/dynamicWallpaperEnabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/dynamic_home_wallpaper"
            android:textSize="20sp"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/humidityDisplayEnabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/display_humidity_at_home_screen"
            android:textSize="20sp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/temperatureDisplayEnabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/display_temperature_at_home_screen"
            android:textSize="20sp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/airPressureDisplayEnabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/display_air_pressure_at_home_screen"
            android:textSize="20sp"/>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <FrameLayout
            android:id="@+id/footerTab"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:background="#373D3F"
            >

            <ImageButton
                android:id="@+id/homeBtn"
                android:layout_width="40dp"
                android:layout_height="37dp"
                android:background="@drawable/home"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="17dp"
                android:contentDescription="@string/home_button" />

            <ImageButton
                android:id="@+id/alertBtn"
                android:layout_width="40dp"
                android:layout_height="37dp"
                android:background="@drawable/alert"
                android:layout_marginLeft="185dp"
                android:layout_marginTop="17dp"
                android:contentDescription="@string/alert_button" />
            <ImageButton
                android:id="@+id/settingsBtn"
                android:layout_width="40dp"
                android:layout_height="37dp"
                android:background="@drawable/settingsselected"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="17dp"
                android:contentDescription="@string/settings_button" />
        </FrameLayout>
    </RelativeLayout>

</LinearLayout>