<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/settingsMenu">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/settings"
        android:textColor="#373D3F"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/visualBtn"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:backgroundTint="#9A9CFC"
            android:textColor="#373D3F"
            android:text="@string/visual_appearance" />

        <Button
            android:id="@+id/profileBtn"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:backgroundTint="#9A9CFC"
            android:textColor="#373D3F"
            android:text="@string/profile_settings" />

        <Button
            android:id="@+id/sensorBtn"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:backgroundTint="#9A9CFC"
            android:textColor="#373D3F"
            android:text="@string/sensor_settings" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <FrameLayout
            android:id="@+id/footerTab"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:background="#373D3F">

            <ImageButton
                android:id="@+id/homeBtn"
                android:layout_width="40dp"
                android:layout_height="37dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="17dp"
                android:background="@drawable/home"
                android:contentDescription="@string/home_button_settings_menu" />

            <ImageButton
                android:id="@+id/alertBtn"
                android:layout_width="40dp"
                android:layout_height="37dp"
                android:layout_marginLeft="185dp"
                android:layout_marginTop="17dp"
                android:background="@drawable/alert"
                android:contentDescription="@string/alert_button_settings_menu" />

            <ImageButton
                android:id="@+id/settingsBtn"
                android:layout_width="40dp"
                android:layout_height="37dp"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="17dp"
                android:background="@drawable/settingsselected"
                android:contentDescription="@string/settings_button_settings_menu" />
        </FrameLayout>
    </RelativeLayout>

</LinearLayout>