<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/profileSettings">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/profile"
        android:textSize="50sp"
        android:textColor="#474BFF"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#D9D9D9"
        android:padding="20dp"
        android:layout_margin="20dp"
        >

        <ImageView
            android:layout_width="109dp"
            android:layout_height="94dp"
            android:layout_gravity="left"
            android:src="@drawable/user"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="John Doe"
                android:padding="5dp"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Number of alerts:"
                android:padding="5dp"
                android:textSize="20sp"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="#D9D9D9"
            android:text="@string/change_name"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:textSize="20sp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="#D9D9D9"
            android:text="@string/change_email"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:textSize="20sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="#D9D9D9"
            android:text="@string/log_out"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:textSize="20sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="#FF0000"
            android:text="@string/delete_account"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <FrameLayout
            android:id="@+id/footerTab"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:background="#373D3F">

            <ImageButton
                android:id="@+id/homeBtn"
                android:layout_width="40dp"
                android:layout_height="37dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="17dp"
                android:background="@drawable/home"
                android:contentDescription="@string/home_button_profile_activity" />

            <ImageButton
                android:id="@+id/alertBtn"
                android:layout_width="40dp"
                android:layout_height="37dp"
                android:layout_marginLeft="185dp"
                android:layout_marginTop="17dp"
                android:background="@drawable/alert"
                android:contentDescription="@string/alert_button_profile_activity" />

            <ImageButton
                android:id="@+id/settingsBtn"
                android:layout_width="40dp"
                android:layout_height="37dp"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="17dp"
                android:background="@drawable/settingsselected"
                android:contentDescription="@string/settings_button_profile_activity" />
        </FrameLayout>
    </RelativeLayout>



</LinearLayout>