<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/homeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-22dp"
        android:includeFontPadding="false"
        android:lineHeight="1dp"
        android:padding="20dp"
        android:text="@string/home"
        android:textColor="#474BFF"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/conditionsDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/timeOfDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:text="@string/time_of_day"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/weatherCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:textStyle="bold"
            android:text="@string/weather_condition" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sensorDataDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/tempImg"
            android:layout_width="23dp"
            android:layout_height="40dp"
            android:background="@drawable/tempdark" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="32°C"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/humidImg"
            android:layout_width="31dp"
            android:layout_height="40dp"
            android:background="@drawable/humiditydark" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="10dp"
            android:text="20%" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sensorDataDisplayPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/airImg"
            android:layout_width="33dp"
            android:layout_height="40dp"
            android:background="@drawable/barometer_dark"
            android:contentDescription="@string/barometer_image" />

        <TextView
            android:id="@+id/airpressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="10dp"
            android:text="20%" />
    </LinearLayout>

    <TextView
        android:id="@+id/detailsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:text="@string/see_more"
        android:textSize="23sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <FrameLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:background="#373D3F">

            <ImageButton
                android:id="@+id/homeBtn"
                android:layout_width="40dp"
                android:layout_height="37dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="17dp"
                android:background="@drawable/homeselected"
                android:contentDescription="@string/home_button_main_activity" />

            <ImageButton
                android:id="@+id/alertBtn"
                android:layout_width="40dp"
                android:layout_height="37dp"
                android:layout_marginLeft="185dp"
                android:layout_marginTop="17dp"
                android:background="@drawable/alert"
                android:contentDescription="@string/alert_button_main_activity" />

            <ImageButton
                android:id="@+id/settingsBtn"
                android:layout_width="40dp"
                android:layout_height="37dp"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="17dp"
                android:background="@drawable/settings"
                android:contentDescription="@string/settings_button_main_activity" />
        </FrameLayout>
    </RelativeLayout>


</LinearLayout>